--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
             <version>6.10.1</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
