--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>4.3.3</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-core -->
+        <dependency>
+            <groupId>net.serenity-bdd</groupId>
+            <artifactId>serenity-core</artifactId>
+            <version>2.3.31</version>
+        </dependency>
 
         <dependency>
             <groupId>net.serenity-bdd</groupId>
