--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,15 @@
                 </configuration>
             </plugin>
             <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+                    <configuration>
+                        <testFailureIgnore>true</testFailureIgnore>
+                        <useSystemClassLoader>false</useSystemClassLoader>
+                    </configuration>
+            </plugin>
+            <plugin>
                 <!-- plugin for serenity report -->
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
@@ -79,7 +88,17 @@
             <artifactId>log4j-core</artifactId>
             <version>2.14.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.14.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
+
+
 
 
 </project>
